--- a/css/partials/_ink.scss
+++ b/css/partials/_ink.scss
@@ -395,7 +395,7 @@ img.center {
 /* Typography */
 
 body, table.body, h1, h2, h3, h4, h5, h6, p, td {
-	color: #444444;
+	color: $text-color;
 	font-family: "Trebuchet MS", "Helvetica", "Arial", sans-serif;
 	font-weight: normal;
 	padding: 0;
@@ -456,22 +456,22 @@ small {
 }
 
 a {
-	color: #2ba6cb;
+	color: $link-color;
 	text-decoration: none;
 	&:hover, &:active {
-		color: #2795b6 !important;
+		color: $link-hover-color !important;
 	}
 	&:visited {
-		color: #2ba6cb !important;
+		color: $link-visited-color !important;
 	}
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-	color: #2ba6cb;
+	color: $link-color;
 }
 
 h1 a:active, h2 a:active, h3 a:active, h4 a:active, h5 a:active, h6 a:active, h1 a:visited, h2 a:visited, h3 a:visited, h4 a:visited, h5 a:visited, h6 a:visited {
-	color: #2ba6cb !important;
+	color: $link-hover-color !important;
 }
 
 /* Panels */
@@ -502,37 +502,37 @@ table {
 			display: block;
 			width: auto !important;
 			text-align: center;
-			background: #005a85;
-			border: 1px solid #004261;
+			background: $btn-default-bg-color;
+			border: 1px solid $btn-default-border-color;
 			padding: 8px;
 			a, a:visited {
 				text-decoration: none;
 				font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
-				color: #ffffff;
+				color: $btn-default-text-color;
 				font-size: 16px;
 				white-space: nowrap;
 				display: block;
 				word-break: keep-all;
 			}
 			&.button-grey {
-				background: #eeeeee;
-				border: 1px solid #cccccc;
+				background: $btn-grey-bg-color;
+				border: 1px solid $btn-grey-border-color;
 				a, a:visited {
-					color: #007db8;
+					color: $btn-grey-text-color;
 				}
 			}
 		}
 		&:hover td, &:visited td, &:active td {
-			background: #005a85;
-			border: 1px solid #004261;
+			background: $btn-default-hover-bg-color;
+			border: 1px solid $btn-default-hover-border-color;
 			a, a:visited {
-				color: #ffffff;
+				color: $btn-default-hover-text-color;
 			}
 			&.button-grey {
-				background: #d4d4d4;
-				border: 1px solid #adadad;
+				background: $btn-grey-hover-bg-color;
+				border: 1px solid $btn-grey-hover-border-color;
 				a, a:visited {
-					color: #007db8;
+					color: $btn-grey-hover-text-color;
 				}
 			}
 		}
