--- a/css/partials/_ink.scss
+++ b/css/partials/_ink.scss
@@ -396,7 +396,7 @@ img.center {
 
 body, table.body, h1, h2, h3, h4, h5, h6, p, td {
 	color: $text-color;
-	font-family: "Trebuchet MS", "Helvetica", "Arial", sans-serif;
+	font-family: "Trebuchet MS", "MS PGothic", "Helvetica", "Arial", sans-serif;
 	font-weight: normal;
 	padding: 0;
 	margin: 0;
@@ -405,7 +405,7 @@ body, table.body, h1, h2, h3, h4, h5, h6, p, td {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Trebuchet MS", "Roboto", "Segoe UI", "Helvetica Neue", "Meiryo UI Reg", "メイリオ Reg", "MS UI Gothic Reg", "Hiragino Kaku Gothic Reg", "ヒラギノ角ゴ Pro W3 Reg", "Microsoft YaHei", "微软雅黑", "Hiragino Sans GB", "Microsoft JhengHei", "微軟正黑體", "Malgun Gothic", Gulim, Tahoma, "Arial Unicode", sans-serif;
+	font-family: "Trebuchet MS", "MS PGothic", "Roboto", "Segoe UI", "Helvetica Neue", "Meiryo UI Reg", "メイリオ Reg", "MS UI Gothic Reg", "Hiragino Kaku Gothic Reg", "ヒラギノ角ゴ Pro W3 Reg", "Microsoft YaHei", "微软雅黑", "Hiragino Sans GB", "Microsoft JhengHei", "微軟正黑體", "Malgun Gothic", Gulim, Tahoma, "Arial Unicode", sans-serif;
 	word-break: normal;
 }
 
@@ -507,7 +507,7 @@ table {
 			padding: 8px;
 			a, a:visited {
 				text-decoration: none;
-				font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
+				font-family: "Trebuchet MS", "MS PGothic", Helvetica, Arial, sans-serif;
 				color: $btn-default-text-color;
 				font-size: 16px;
 				white-space: nowrap;
