adding inbound email to project. complete.
Change-Id: I39b2d4d6d85ee762df2795c906d1a93e076f2aaf

--- a/css/partials/_ink.scss
+++ b/css/partials/_ink.scss
@@ -123,17 +123,17 @@ table {
 		}
 	}
 	&.row {
-		padding: 0px;
+		padding: 0;
 		width: 100%;
 		position: relative;
 	}
 	td {
 		&.wrapper {
-			padding: 10px 20px 0px 0px;
+			padding: 10px 20px 0 0;
 			position: relative;
 		}
 		&.sub-column, &.sub-columns {
-			min-width: 0px;
+			min-width: 0;
 		}
 		&.offset-by-one {
 			padding-left: 50px;
@@ -170,7 +170,7 @@ table {
 		}
 		&.expander {
 			visibility: hidden;
-			width: 0px;
+			width: 0;
 			padding: 0 !important;
 		}
 	}
@@ -182,14 +182,14 @@ table {
 		}
 	}
 	&.columns > tbody > tr > td, &.column > tbody > tr > td, &.columns > tr > td, &.column > tr > td {
-		padding: 0px 0px 10px;
+		padding: 0 0 10px;
 	}
 	&.columns td.sub-columns, &.column td.sub-columns, &.columns td.sub-column, &.column td.sub-column {
 		padding-right: 10px;
 	}
 
 	&.row td.last, &.container td.last {
-		padding-right: 0px;
+		padding-right: 0;
 	}
 	&.one {
 		width: 30px;
@@ -396,7 +396,7 @@ img.center {
 
 body, table.body, h1, h2, h3, h4, h5, h6, p, td {
 	color: $text-color;
-	font-family: "Trebuchet MS", "MS PGothic", "Helvetica", "Arial", sans-serif;
+	font-family: 'Trebuchet MS', 'MS PGothic', 'Helvetica', 'Arial', sans-serif;
 	font-weight: normal;
 	padding: 0;
 	margin: 0;
@@ -405,7 +405,7 @@ body, table.body, h1, h2, h3, h4, h5, h6, p, td {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Trebuchet MS", "MS PGothic", "Roboto", "Segoe UI", "Helvetica Neue", "Meiryo UI Reg", "メイリオ Reg", "MS UI Gothic Reg", "Hiragino Kaku Gothic Reg", "ヒラギノ角ゴ Pro W3 Reg", "Microsoft YaHei", "微软雅黑", "Hiragino Sans GB", "Microsoft JhengHei", "微軟正黑體", "Malgun Gothic", Gulim, Tahoma, "Arial Unicode", sans-serif;
+	font-family: 'Trebuchet MS', 'MS PGothic', 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Meiryo UI Reg', 'メイリオ Reg', 'MS UI Gothic Reg', 'Hiragino Kaku Gothic Reg', 'ヒラギノ角ゴ Pro W3 Reg', 'Microsoft YaHei', '微软雅黑', 'Hiragino Sans GB', 'Microsoft JhengHei', '微軟正黑體', 'Malgun Gothic', Gulim, Tahoma, 'Arial Unicode', sans-serif;
 	word-break: normal;
 }
 
@@ -507,7 +507,7 @@ table {
 			padding: 8px;
 			a, a:visited {
 				text-decoration: none;
-				font-family: "Trebuchet MS", "MS PGothic", Helvetica, Arial, sans-serif;
+				font-family: 'Trebuchet MS', 'MS PGothic', Helvetica, Arial, sans-serif;
 				color: $btn-default-text-color;
 				font-size: 16px;
 				white-space: nowrap;
@@ -619,8 +619,8 @@ body.outlook p {
 			table-layout: fixed !important;
 			float: none !important;
 			width: 100% !important;
-			padding-right: 0px !important;
-			padding-left: 0px !important;
+			padding-right: 0 !important;
+			padding-left: 0 !important;
 			display: block !important;
 		}
 		table {
