--- a/css/global-v2.css
+++ b/css/global-v2.css
@@ -102,14 +102,14 @@ table.container {
   table.container table.row {
     display: block; }
 table.row {
-  padding: 0px;
+  padding: 0;
   width: 100%;
   position: relative; }
 table td.wrapper {
-  padding: 10px 20px 0px 0px;
+  padding: 10px 20px 0 0;
   position: relative; }
 table td.sub-column, table td.sub-columns {
-  min-width: 0px; }
+  min-width: 0; }
 table td.offset-by-one {
   padding-left: 50px; }
 table td.offset-by-two {
@@ -134,7 +134,7 @@ table td.offset-by-eleven {
   padding-left: 550px; }
 table td.expander {
   visibility: hidden;
-  width: 0px;
+  width: 0;
   padding: 0 !important; }
 table.columns, table.column {
   margin: 0 auto; }
@@ -142,11 +142,11 @@ table.columns, table.column {
     padding-left: 10px;
     padding-right: 10px; }
 table.columns > tbody > tr > td, table.column > tbody > tr > td, table.columns > tr > td, table.column > tr > td {
-  padding: 0px 0px 10px; }
+  padding: 0 0 10px; }
 table.columns td.sub-columns, table.column td.sub-columns, table.columns td.sub-column, table.column td.sub-column {
   padding-right: 10px; }
 table.row td.last, table.container td.last {
-  padding-right: 0px; }
+  padding-right: 0; }
 table.one {
   width: 30px; }
 table.two {
@@ -281,7 +281,7 @@ img.center {
 /* Typography */
 body, table.body, h1, h2, h3, h4, h5, h6, p, td {
   color: #333333;
-  font-family: "Trebuchet MS", "MS PGothic", "Helvetica", "Arial", sans-serif;
+  font-family: 'Trebuchet MS', 'MS PGothic', 'Helvetica', 'Arial', sans-serif;
   font-weight: normal;
   padding: 0;
   margin: 0;
@@ -289,7 +289,7 @@ body, table.body, h1, h2, h3, h4, h5, h6, p, td {
   line-height: 1.3; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Trebuchet MS", "MS PGothic", "Roboto", "Segoe UI", "Helvetica Neue", "Meiryo UI Reg", "πâíπéñπâ¬πé¬ Reg", "MS UI Gothic Reg", "Hiragino Kaku Gothic Reg", "πâÆπâ⌐πé«πâÄΦºÆπé┤ Pro W3 Reg", "Microsoft YaHei", "σ╛«Φ╜»Θ¢àΘ╗æ", "Hiragino Sans GB", "Microsoft JhengHei", "σ╛«Φ╗ƒµ¡úΘ╗æΘ½ö", "Malgun Gothic", Gulim, Tahoma, "Arial Unicode", sans-serif;
+  font-family: 'Trebuchet MS', 'MS PGothic', 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Meiryo UI Reg', 'πâíπéñπâ¬πé¬ Reg', 'MS UI Gothic Reg', 'Hiragino Kaku Gothic Reg', 'πâÆπâ⌐πé«πâÄΦºÆπé┤ Pro W3 Reg', 'Microsoft YaHei', 'σ╛«Φ╜»Θ¢àΘ╗æ', 'Hiragino Sans GB', 'Microsoft JhengHei', 'σ╛«Φ╗ƒµ¡úΘ╗æΘ½ö', 'Malgun Gothic', Gulim, Tahoma, 'Arial Unicode', sans-serif;
   word-break: normal; }
 
 h1 {
@@ -367,7 +367,7 @@ table.button {
     padding: 8px; }
     table.button td a, table.button td a:visited {
       text-decoration: none;
-      font-family: "Trebuchet MS", "MS PGothic", Helvetica, Arial, sans-serif;
+      font-family: 'Trebuchet MS', 'MS PGothic', Helvetica, Arial, sans-serif;
       color: #ffffff;
       font-size: 16px;
       white-space: nowrap;
@@ -443,8 +443,8 @@ body.outlook p {
     table-layout: fixed !important;
     float: none !important;
     width: 100% !important;
-    padding-right: 0px !important;
-    padding-left: 0px !important;
+    padding-right: 0 !important;
+    padding-left: 0 !important;
     display: block !important; }
   table[class="body"] table.columns td, table[class="body"] table.column td {
     width: 100% !important; }
